chatgut/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  labels:
    app: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      name: authservice
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: ghcr.io/chatgut/authservice2:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            name: authservice
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
  namespace: default
  labels:
    app: authservice
    service: authservice
spec:
  selector:
    app: authservice
  ports:
    - name: http
      port: 8080 # The port that the service is running on in the cluster
      targetPort: 8080 # The port exposed by the pod, containerport
