chatgut/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: jwt-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtualservice
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - jwt-gateway
  http:
    - name: auth
      match:
      - uri:
         prefix: /auth
      - uri:
         prefix: /login
      rewrite:
        uri: /api/auth/login
      route:
        - destination:
            host: authservice.default.svc.cluster.local
